# K-lendar

./: .gitignore  README.md  docker-compose.yml  run.bat  setup_infra.bat
backend/: .env_example  Dockerfile.server  main.py  pyproject.toml  run_server.sh  server.Dockerfile
backend/app/: settings.py
backend/app/api/: agenda_router.py  auth_router.py  chord_router.py  decorators.py  event_router.py  group_router.py  invitation_router.py  main.py  member_router.py  notification_router.py  user_router.py
backend/app/application/: base_repository.py  user_service.py
backend/app/infrastructure/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 056345b0b5b7_add_delete_orphan_to_relations.py  05cbd4bb7516_add_created_at_and_updated_at_columns_.py  1c4be4af4ef2_initial_migration.py  1fbf5d574036_add_single_parent_into_grouphierarchy_.py  2366086a8b7a_add_event_type_enum_in_userevent_table.py  2875cd9aa896_change_id_type_from_uuid_to_str.py  4334de7ff72f_add_group_id_to_userevent_table.py  4ec0aba048a9_add_single_parent_into_grouphierarchy_.py  656dd3471023_add_grouphierarchy_table.py  70a4cb944648_add_status_enum_in_userevent_table.py  85dfa1c784d7_first_migration.py  8b7ae802c594_columns_modification_in_notification_.py  9651e915d8e1_add_priority_to_notification_table.py  b0521cf7ac6b_add_group_to_notification_table.py  bda7d32046c7_add_description_in_group_table.py  c5cf83609daf_add_title_to_notification_table.py  ea1c0fe3f4e7_change_enum_in_userevent_table.py  ea9f7a280f50_update.py
backend/tests/: connection_db.py
frontend/: client.py  (+9 more)
(+91 files in other folders)
