[tool.poetry]
name = "backend"
version = "0.1.0"
description = "API REST project following Clean Architecture with FastAPI and SQLAlchemy"
authors = ["Daniel Angel <danielangelarro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlalchemy = "^1.4.0"
pydantic = { version = "^1.9.0", extras = ["email"] }
alembic = "^1.8.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
uvicorn = "^0.18.0"
inject = "^5.2.1"
jwt = "^1.3.1"
bcrypt = "^4.2.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
